--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
         "css-loader": "^3.0.0",
         "dotenv": "^8.1.0",
         "express": "^4.17.1",
-        "html-loader": "^0.5.5",
         "html-webpack-plugin": "^3.2.0",
         "node-sass": "^4.12.0",
         "sass-loader": "^7.1.0",
@@ -30,12 +29,14 @@
     "devDependencies": {
         "@babel/plugin-transform-runtime": "^7.5.5",
         "clean-webpack-plugin": "^3.0.0",
+        "ejs": "^2.6.2",
+        "file-loader": "^6.0.0",
+        "html-loader": "^0.5.5",
+        "jest": "^24.9.0",
+        "mini-css-extract-plugin": "^0.8.0",
         "node-mocks-http": "^1.7.6",
         "optimize-css-assets-webpack-plugin": "^5.0.3",
         "supertest": "^4.0.2",
-        "ejs": "^2.6.2",
-        "jest": "^24.9.0",
-        "mini-css-extract-plugin": "^0.8.0",
         "webpack-bundle-analyzer": "^3.4.1",
         "webpack-dev-server": "^3.8.0",
         "workbox-webpack-plugin": "^4.3.1"
